# worktrunk

./: .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  Taskfile.yaml  codecov.yml  config.example.toml
.claude/: settings.local.json
.claude/rules/: caching-strategy.md  cli-output-formatting.md  output-system-architecture.md
.config/: lychee.toml  nextest.toml  wt.toml
.github/workflows/: build-docs.yaml  ci.yaml  claude-ci-fix.yaml  claude-mention.yaml  claude.yaml  publish-docs.yaml  release.yaml
benches/: CLAUDE.md  completion.rs  list.rs
dev/: config.example.toml  coverage.sh
dev/wt-demo/: CLAUDE.md
docs/: CLAUDE.md  config.toml
docs/content/: claude-code.md  commands.md  config.md  faq.md  hook.md  hooks.md  list.md  llm-commits.md  merge.md  remove.md  select.md  step.md  switch.md  tips-patterns.md  why-worktrunk.md  worktrunk.md
docs/demos/: CLAUDE.md  build  lib.py  themes.py
docs/demos/shared/: lib.py  (+1 more)
docs/sass/: custom.scss
docs/static/: search.js
docs/templates/: _variables.html  base.html  index.html  page.html
fish-functions/: git-llm-message.fish
scripts/: publish-assets  wt-demo-build.sh
scripts/wt-demo/: demo.tape
src/: cli.rs  completion.rs  config.rs  display.rs  error_format.rs  git.rs  lib.rs  llm.rs  main.rs  md_help.rs  path.rs  shell.rs  shell_exec.rs
src/cli/: mod.rs  step.rs
src/commands/: CLAUDE.md  command_approval.rs  command_executor.rs  commit.rs  completion.rs  config.rs  configure_shell.rs  dev.rs  for_each.rs  hook_commands.rs  hooks.rs  init.rs  merge.rs  mod.rs  process.rs  project_config.rs  repository_ext.rs  select.rs  standalone.rs  statusline.rs  step_commands.rs  worktree.rs
src/config/: expansion.rs  project.rs  user.rs
src/git/: error.rs  mod.rs  repository.rs.bak
src/output/: directive.rs  global.rs  handlers.rs  interactive.rs  mod.rs  shell_integration.rs  traits.rs
src/snapshots/: worktrunk__shell__tests__init_fish.snap
src/styling/: constants.rs  format.rs  hyperlink.rs  line.rs  mod.rs
src/trace/: chrome.rs  mod.rs  parse.rs
templates/: bash.sh  fish.fish  fish_wrapper.fish  nushell.nu  posix_directives.sh  powershell.ps1  xonsh.xsh  zsh.zsh
tests/: CLAUDE.md  plugin_sync.rs
tests/common/: list_snapshots.rs  mod.rs  progressive_output.rs  shell.rs
tests/helpers/mock-stub/: Cargo.toml
tests/helpers/mock-stub/src/: main.rs
tests/helpers/setup-select-test/: Cargo.toml
tests/helpers/setup-select-test/src/: main.rs
tests/integration_tests/: analyze_trace.rs  approval_pty.rs  approval_save.rs  approval_ui.rs  approvals.rs  bare_repository.rs  ci_status.rs  completion.rs  completion_validation.rs  config_cache.rs  config_init.rs  config_list.rs  config_show.rs  config_state.rs  configure_shell.rs  default_branch.rs  directives.rs  e2e_shell_post_start.rs  for_each.rs  git_error_display.rs  help.rs  hook_show.rs  init.rs  internal_flag.rs  list.rs  list_config.rs  merge.rs  mod.rs  post_start_commands.rs  push.rs  readme_sync.rs  remove.rs  repository.rs  security.rs  select.rs  shell_wrapper.rs  spacing_edge_cases.rs  statusline.rs  step_copy_ignored.rs  switch.rs  (+1 more)
tests/snapshots/: git_error_display__branch_already_exists.snap  (+452 more)
(+112 files in other folders)
