[package]
name = "arbor"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14", default-features = false, features = ["derive", "std"] }
clap = { version = "4.5", features = ["derive"] }
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "redactions", "filters"] }
insta-cmd = "0.6"
assert_cmd = "2.0"
tempfile = "3.14"
toml = "0.8"
