[package]
name = "worktrunk"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
# Enable testing for shells that require extra installation steps (nushell, powershell, elvish, xonsh, oil)
tier-2-integration-tests = []

[lib]
name = "worktrunk"
path = "src/lib.rs"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1.0"
askama = { version = "0.14", default-features = false, features = ["derive", "std"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
config = "0.15"
directories = "6.0"
env_logger = "0.11"
etcetera = "0.11"
log = "0.4"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1"
synoptic = "2"
terminal_size = "0.4"
toml = "0.9"
unicode-width = "0.2"

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build"] }

[dev-dependencies]
insta = { version = "1.43", features = ["yaml", "redactions", "filters"] }
insta-cmd = "0.6"
assert_cmd = "2.0"
rstest = "0.26"
tempfile = "3.23"
toml = "0.9"
criterion = "0.7"
regex = "1.12"
portable-pty = "0.9"

[[bench]]
name = "completion"
harness = false

[[bench]]
name = "list"
harness = false

[lints.rust]
unsafe_code = "forbid"
